<resources>
    <string name="app_name">Renaisn</string>
    <string name="receiving_shared_label">Renaisn·search</string>
    <string name="tip_perm_request_storage">Renaisn needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Renaisn data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the renaisn folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">Subscription</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ps_auto_download">Download the latest chapters automatically  when updating books</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">WebDav settings/Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
    <string name="on_restore">Restoring</string>
    <string name="restore_success">Restore succeed</string>
    <string name="restore_fail">Backup failed</string>
    <string name="screen_direction">Screen orientation</string>
    <string name="screen_sensor">Auto(sensor)</string>
    <string name="screen_landscape">Landscape</string>
    <string name="screen_portrait">Portrait</string>
    <string name="screen_unspecified">Follow system</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="all_chapter_num">%d chapters</string>
    <string name="interface_setting">Interface</string>
    <string name="brightness">Brightness</string>
    <string name="chapter_list">Chapters</string>
    <string name="next_chapter">Next</string>
    <string name="previous_chapter">Prior</string>
    <string name="pt_hide_status_bar">Hide status bar</string>
    <string name="ps_hide_status_bar">Hide system navigation bar when reading</string>
    <string name="read_aloud">Speech</string>
    <string name="read_aloud_t">Speaking</string>
    <string name="read_aloud_s">Click to open the Reading</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_pause">Pause</string>
    <string name="text_return">Back</string>
    <string name="refresh">Refresh</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear_cache">Clear cache</string>
    <string name="replace_rule_edit">Edit replacement rule</string>
    <string name="replace_rule">Pattern</string>
    <string name="replace_to">Replacement</string>
    <string name="replace_rule_summary">Rule name</string>
    <string name="threads_num_title">Number of concurrent tasks</string>
    <string name="bookmark">Bookmarks</string>
    <string name="ps_default_read">Use Bookshelf as start page</string>
    <string name="pt_default_read">Auto jump to Recent list</string>
    <string name="use_to">Replacement object. Book name or source url is available</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_desc">Select a theme you want</string>
    <string name="use_regex">Using Regex</string>
    <string name="web_port_title">Web port</string>
    <string name="help">Help</string>
    <string name="group">Group</string>
    <string name="show_rss">Display Subscription</string>
    <string name="add_to_text_context_menu_s">Long tap to display Renaisn·Search in the operation menu</string>
    <string name="add_to_text_context_menu_t">Text operation display Search</string>
    <string name="record_log">Record log</string>
    <string name="main_activity">Start page</string>
    <string name="media_button_on_exit_title">Headset buttons are always available</string>
    <string name="media_button_on_exit_summary">Headset buttons are available even exit the app.</string>
    <string name="other">Other</string>
    <string name="clear_cache_summary">Clear the cache of the downloaded books and fonts</string>
    <string name="replace_enable_default_t">Enable replace rule by default</string>
    <string name="replace_enable_default_s">For new added books</string>
    <string name="language">Language</string>
    <string name="read_record">Read record</string>
    <string name="read_record_summary">Read record summary</string>
    <string name="auto_clear_expired">"Clear expired search histories automatically "</string>
    <string name="auto_clear_expired_summary">Search histories more than one day</string>
    <string name="pre_download">Download in advance</string>
    <string name="pre_download_s">Download %s chapters in advance</string>
    <string name="show_discovery">Show</string>
    <string name="pref_cronet_summary">use Cronet access network</string>
    <string name="anti_alias">Anti-Aliasing</string>
    <string name="pref_anti_alias_summary">Anti-Aliasing when draw picture</string>
    <string name="direct_link_upload_rule">Straight chain upload rule</string>
    <string name="direct_link_upload_rule_summary">用于导出书源书单时生成直链url</string>
    <string name="book_tree_uri_t">书籍保存位置</string>
    <string name="book_tree_uri_s">从其它应用打开的书籍保存位置</string>
    <string name="user_agent">User agent</string>
    <string name="check_source_config">校验设置</string>
    <string name="record_debug_log">Record debug log</string>
    <string name="scope_title">作用于标题</string>
    <string name="scope_content">作用于正文</string>
    <string name="all_bookmark">所有书签</string>
    <string name="timeout_millisecond">超时毫秒数</string>
    <string name="bitmap_cache_size_summary">Current cache max size %1$s MB</string>
    <string name="bitmap_cache_size">bitmap cache size</string>
    <string name="show_add_to_shelf_alert_title">返回时提示放入书架</string>
    <string name="show_add_to_shelf_alert_summary">阅读未放入书架的书籍在返回时提示放入书架</string>
    <string name="ignore_audio_focus_title">Ignore audio focus</string>
    <string name="ignore_audio_focus_summary">Allow audio to be played at the same time as other applications</string>
    <string name="source_edit_text_max_line">Maximum number of rows in the source edit box</string>
    <string name="web_service_wake_lock">WebService Wake up Lock</string>
    <string name="web_service_wake_lock_summary">The wake-up lock is enabled when the web service is enabled, and some phones will be killed when the wake-up lock is enabled.</string>
</resources>